Implementadas mejoras de configuración, logging y UI

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,19 @@
 [build]
-    functions = "netlify/funciones"
+    functions = ".netlify/functions"
+    publish = "."
+
+[functions]
+  directory = ".netlify/functions"
+  node_bundler = "nft"
+
+[[redirects]]
+  from = "/.netlify/functions/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
